# dowel

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
dowel/: Cargo.toml
dowel-macros/: Cargo.toml
dowel-macros/src/: lib.rs
dowel/examples/: actix.rs  actor.rs  attributes.rs  axum.rs  axum_07.rs  axum_cqrs.rs  stack.rs  toolkit.rs
dowel/src/: lib.rs
dowel/tests/: ui.rs
dowel/tests/ui/: array.rs  context.rs  context_dup.rs  context_dup.stderr  default.rs  missing_dependency.rs  missing_dependency.stderr  on_enum.rs  on_enum.stderr  pass.rs  skip.rs  tuple.rs  with.rs
hewn/: Cargo.toml
hewn-macros/: Cargo.toml
hewn-macros/src/: lib.rs
hewn/examples/: axum.rs  axum_07.rs  axum_cqrs.rs
hewn/src/: lib.rs
hewn/tests/: ui.rs
hewn/tests/ui/: context.rs  context_dup.rs  missing_dependency.rs  on_enum.rs  pass.rs  skip.rs  tuple.rs  with.rs
