[workspace]
resolver = "2"
members = ["hewn", "hewn-macros"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aoprisan/hewn"
rust-version = "1.70"

[workspace.dependencies]
hewn-macros = { path = "hewn-macros", version = "0.1.0" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
