[package]
name = "dowel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zero-cost compile-time dependency wiring for Rust. One trait, one derive, no container."
readme = "../README.md"
keywords = ["dependency-injection", "wiring", "derive", "zero-cost", "di"]
categories = ["rust-patterns"]

[dependencies]
dowel-macros = { workspace = true }

[dev-dependencies]
trybuild = "1"
# The default/recommended examples track the latest axum (native `async fn`
# trait). `axum_07` keeps the pre-0.8 `#[async_trait]` form alive for consumers
# still on 0.7; it is pulled in under a renamed package so both lines coexist.
axum = "0.8"
axum07 = { package = "axum", version = "0.7" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
# Actor examples: `actor` is hand-rolled on tokio `mpsc` (no extra dep beyond
# the `sync` feature above); `actix` shows the same leaf pattern with a real
# actor framework, whose `Addr` is the clonable handle the graph wires.
actix = "0.13"
# `toolkit` is the "real infrastructure" example: a live sqlx SQLite pool as the
# `Db` leaf and a `tracing` audit sink behind an actor. `sqlx`'s `SqlitePool` is
# already an `Arc`-backed clonable handle, so it drops straight into a leaf.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "attributes"
required-features = ["derive"]

[[example]]
name = "axum"
required-features = ["derive"]

[[example]]
name = "axum_cqrs"
required-features = ["derive"]

[[example]]
name = "axum_07"
required-features = ["derive"]

[[example]]
name = "actor"
required-features = ["derive"]

[[example]]
name = "stack"
required-features = ["derive"]

[[example]]
name = "toolkit"
required-features = ["derive"]

[[example]]
name = "actix"
required-features = ["derive"]

[features]
default = ["derive"]
derive = []
