[package]
name = "hewn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Zero-cost compile-time dependency wiring for Rust. One trait, one derive, no container."
readme = "../README.md"
keywords = ["dependency-injection", "wiring", "derive", "zero-cost", "di"]
categories = ["rust-patterns"]

[dependencies]
hewn-macros = { workspace = true }

[dev-dependencies]
trybuild = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["derive"]
derive = []
